# comequeta-backend

./: .env.example  .gitaliases  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/: config.py  db.py  main.py
app/dtos/: schemas.py
app/entities/: conversation.py  user.py
app/gateways/: auth_router.py  chat_router.py  connection_manager.py  deps.py  schemas.py  users_router.py
app/interfaces/: message_repository.py  user_repository.py
app/repositories/: message_repository.py  models.py  user_repository.py
app/security/: jwt_provider.py  password_hasher.py
app/usecases/: authenticate_user.py  delete_conversation.py  errors.py  list_conversation.py  list_conversations.py  list_nearby_users.py  list_users.py  mark_read.py  register_user.py  send_message.py  update_location.py  update_profile.py
core/entities/: message.py  user.py
core/interfaces/: message_repository.py  security.py  user_repository.py
core/use_cases/: authenticate_user.py  delete_conversation.py  errors.py  list_conversation.py  list_conversations.py  list_nearby_users.py  list_users.py  mark_read.py  register_user.py  send_message.py  update_location.py  update_profile.py
docs/adr/: 0001-chat-architecture.md  0002-chat-hosting.md  0003-database-and-on-device-storage.md
infra/: db.py
infra/repositories/: message_repository.py  models.py  user_repository.py
infra/security/: jwt_provider.py  password_hasher.py
scripts/: branch-scripts.md  create-feature-branch.sh  create-hotfix-branch.sh  generate_openapi.py  serve.sh  setup-git-aliases.sh  validate-commit-msg.sh
tests/: fakes.py
tests/integration/: conftest.py  test_auth_api.py  test_chat_api.py  test_chat_delete_api.py  test_users_api.py
tests/unit/: test_authenticate_user.py  test_chat_queries.py  test_delete_conversation.py  test_jwt_provider.py  test_list_nearby_users.py  (+7 more)
(+3 files in other folders)
